...
    return CupertinoPageScaffold(
      navigationBar: CupertinoNavigationBar(
          automaticallyImplyLeading: false,
          transitionBetweenRoutes: false,
          backgroundColor: CupertinoTheme.of(context).barBackgroundColor,
          middle: Text(
            'Options',
            style: TextStyle(
                color: CupertinoTheme.of(context).primaryColor, fontSize: 18),
          ),
          leading: CupertinoNavigationBarBackButton(
            onPressed: () => Navigator.of(context).pop(),
            color: CupertinoTheme.of(context).primaryColor,
...
                                databaseService: databaseService)))
                  },
                  title: const Text('Request'),
                ),
                OptionTile(
                  leading: const Icon(CupertinoIcons.settings),
                  title: const Text('Settings'),
                  onTap: () => Navigator.of(context, rootNavigator: true)
                      .push(CupertinoPageRoute(
                          builder: (context) => SettingsPage(
                                notificationService: widget.notificationService,
                              ))),
                ),
                OptionTile(
                  leading: const Icon(CupertinoIcons.trash),
                  title: const Text('Delete Account'),
                  onTap: () async => await deleteAccount(databaseService),
                ),
                OptionTile(
                  leading: const Icon(CupertinoIcons.arrow_right_to_line),
                  title: const Text('Exit'),
                  onTap: () async {
                    await _signOut(context, databaseService);
                  },
                ),
              ],
            ),
...
      showCupertinoDialog(
        context: context,
        builder: (BuildContext newContext) {
          return CupertinoAlertDialog(
            title: const Text('Delete Account'),
            content:
                const Text('Are you sure you want to delete your account?'),
            actions: <CupertinoDialogAction>[
              CupertinoDialogAction(
                child: const Text('No'),
                onPressed: () {
                  Navigator.of(newContext).pop();
                },
              ),
              CupertinoDialogAction(
                  child: const Text('Yes'),
                  onPressed: () async {
                    Navigator.of(newContext).pop();
                    showCupertinoDialog(
                      context: context,
                      builder: (BuildContext loadingContext) {
                        buildContext = loadingContext;
...
                      showCupertinoDialog(
                        context: context,
                        builder: (BuildContext newContext) {
                          return CupertinoAlertDialog(
                            title: const Text('Error'),
                            content: const Text(
                                'Failed to reauthenticate with Google account'),
                            actions: <CupertinoDialogAction>[
                              CupertinoDialogAction(
                                child: const Text('Ok'),
                                onPressed: () {
                                  Navigator.of(newContext).pop();
                                },
                              ),
                            ],
                          );
...
