...
                      Navigator.of(buildContext).pop();
                    }
                    if (context.mounted) Navigator.of(context).pop();
                  }
                },
                child: Text(
                  'Done',
                  style: TextStyle(
                    fontWeight: FontWeight.bold,
                    color: CupertinoTheme.of(context).primaryColor,
                  ),
                ))),
        child: _buildSettingsPage(user));
...
                    decoration: BoxDecoration(
                      borderRadius: BorderRadius.circular(10),
                      color: CupertinoTheme.of(context).primaryContrastingColor,
                    ),
                    child: Column(children: [
                      CupertinoListTile(
                        title: const Text('Categories'),
                        leading: const Icon(FontAwesomeIcons.tableList),
                        trailing: const Icon(CupertinoIcons.forward),
                        onTap: () {
                          Navigator.of(context).push(
                            CupertinoPageRoute(
                              builder: (context) => CategoriesPage(
...
  }

  Future<bool> _validatePage(DatabaseService databaseService) async {
    if (_nameController.text.isEmpty ||
        _surnameController.text.isEmpty ||
        _usernameController.text.isEmpty) {
      _showDialog('Invalid choice', 'Please fill all the fields');
      return false;
    }

    if (_oldUsername != _usernameController.text &&
        !await _validateUsername(_usernameController.text, databaseService)) {
      _showDialog('Invalid choice', 'Username is already taken.');
...
  }

  Future<bool> _validateUsername(
      String username, DatabaseService databaseService) async {
    final isUsernameTaken = await databaseService.isUsernameTaken(username);
    if (isUsernameTaken) {
      debugPrint('Username is already taken');
      return false;
    }
    return true;
  }

  Future<void> _saveUserData(DatabaseService databaseService) async {
...
      builder: (BuildContext context) {
        return CupertinoAlertDialog(
          title: Text(title),
          content: Text(content),
          actions: <CupertinoDialogAction>[
            CupertinoDialogAction(
              child: const Text('OK'),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
          ],
        );
...
